Revision history for URI

{{$NEXT}}

5.16      2022-10-12 13:10:40Z
    - Merge the methods from URI::QueryParam into URI, so they are always
      available (GH#114) (Graham Knop)

5.15      2022-10-11 14:48:28Z
    - Teach uri_escape to accept a Regexp object as the characters to escape
      as an alternative to a character class. (GH#113) (Graham Knop)

5.14      2022-10-10 20:37:57Z
    - Fix uri_escape allowing \w style character classes in its character set
      parameter (GH#112) (Graham Knop)

5.13      2022-10-06 16:46:32Z
    - Regression test added for a previous bug (5.11) in URI::file (Perlbotics).
      file() method of URI::file can return the current working directory
      instead of the properly unescaped path. (GH#106) (Perlbotics)
    - Replace "Test" with "Test::More" (GH#107) (James Raspass)
    - Replace raw TAP printing with "Test::More" (GH#108) (James Raspass)
    - Apply perlimports to tests (GH#110) (Olaf Alders)
    - Improve escaping of unwanted characters (GH#78) (Branislav Zahradnk)

5.12      2022-07-10 23:48:50Z
    - Fix an issue where i.e. 'file:///tmp/###' was not properly escaped.
      A non-existing authority part was accidentally processed.
      Details: https://github.com/libwww-perl/URI/issues/102
      (GH#102) (Perlbotics)
    - Reverts to previous behavior (5.10) for 'mailto:' scheme for
      escaping square brackets.

5.11      2022-07-04 20:53:38Z
    - Fix some typos in URI::file (GH#94) (Olaf Alders)
    - Escape square brackets in path (GH#100) (Perlbotics)
    - Fix storable.t (GH#97) (Shoichi Kaji)

5.10      2021-10-25 20:58:42Z
    - Remove Authority section from dist.ini (GH#86) (Olaf Alders)
    - Make URI::mailto parse subaddresses with + sign correctly (GH#89) (Julien
      Fiegehenn)

5.09      2021-03-03 15:16:47Z
    - Update Business::ISBN version requirements (GH#85) (brian d foy and Olaf
      Alders)

5.08      2021-02-28 18:08:32Z
    - added URI::nntps (GH#82)

5.07      2021-01-29 22:52:20Z